objects/partdir_mp__Partner_Marketplace_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>partdir_mp__Allow_creating_an_App_without_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow creating an App without approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Allow_deleting_an_App_without_approval__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow deleting an App without approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Allow_updating_an_App_without_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow updating an App without approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__App_Additional_Info_Field_Set__c</fullName>
        <label>App Additional Info Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__App_Filtering_Field_Set_Name__c</fullName>
        <label>deprecated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Community_URL__c</fullName>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Enable_Custom_Ordering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Custom Ordering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Enable_advanced_filtering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable advanced filtering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Enable_notifications_on_Account_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable notifications on Account Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Enable_notifications_on_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable notifications on Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Enable_notifications_to_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable notifications to Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Enable_notifications_to_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable notifications to Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Filtering_Field_Set_Name__c</fullName>
        <label>deprecated</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Only_one_review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow only one review per user</description>
        <label>Only one review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Org_Wide_Address_Id__c</fullName>
        <label>Org Wide Address</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Partner_Account_Field__c</fullName>
        <label>Partner Account Field</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Partner_Additional_Info_Field_Set__c</fullName>
        <label>Partner Additional Info Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Use_custom_Web_to_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use custom Web-to-Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Web_to_Lead_form__c</fullName>
        <label>Web-to-Lead form</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Partner Marketplace Setting</label>
    <pluralLabel>Partner Marketplace Settings</pluralLabel>
</CustomObject>